Añadidos formularios para más grupos de materiales

--- a/html/index.html
+++ b/html/index.html
@@ -24,3 +24,9 @@
 </body>
 </html>
 
+<div>
+    <button onclick="openForm('aceites')">Aceites</button>
+    <button onclick="openForm('confecciones')">Confecciones</button>
+    <button onclick="openForm('lubricantes')">Lubricantes</button>
+    <!-- Añadir más botones según los grupos de artículos -->
+</div>
